--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-The files in this directory are related to classwork for METR 5004: Fundamentals of Atmospheric Science at the University of Oklahoma School of Meteorology.
+The files in this directory are related to classwork for METR 5004: Fundamentals
+of Atmospheric Science at the University of Oklahoma School of Meteorology.
 
 -------------------------
 xyz.xlsx
